[package]
name = "lunarlander_genetic"
version = "0.1.0"
authors = ["Seth Nielsen <sethmnielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.4"
cpython = "0.5"

# [dev-dependencies]
# criterion = { version = "0.3", features = ["html_reports"] }

# [[bench]]
# name = "genetic_benchmark"
# path = "benches/genetic/genetic_benchmark.rs"
# harness = false