[package]
name = "lunarlander_genetic"
version = "0.2.0"
authors = ["Seth Nielsen <sethmnielsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.7.2"
cpython = "0.7"

# [dev-dependencies]
# criterion = { version = "0.3", features = ["html_reports"] }

# [[bench]]
# name = "genetic_benchmark"
# path = "benches/genetic/genetic_benchmark.rs"
# harness = false